[tool.poetry]
name = "tomlkit"
version = "0.10.1"
description = "Style preserving TOML library"
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/sdispater/tomlkit"
repository = "https://github.com/sdispater/tomlkit"

include = [
  { path = "tomlkit/py.typed" },
  { path = "tests", format = "sdist" },
  { path = "docs", format = "sdist" },
  { path = "CHANGELOG.md", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"
pre-commit = {version = "^2.1.0", python = "^3.6.1"}
mypy = "^0.920"
Sphinx = "^4.3.2"
furo = "^2021.11.23"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | tests/toml-test
)/
'''

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
lines_after_imports = 2
lines_between_types = 1

known_first_party = ["tomlkit"]
known_third_party = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0a9"]
build-backend = "poetry.core.masonry.api"
